[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/ServerDialog.gd" type="Script" id=1]

[node name="ServerDialog" type="ConfirmationDialog"]
margin_left = 7.0
margin_top = 7.0
margin_right = 283.0
margin_bottom = 116.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
window_title = "Server Dialog"
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -46.5
margin_right = -8.0
margin_bottom = 18.5
columns = 2

[node name="TextLabel" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Name"

[node name="TextEdit" type="LineEdit" parent="GridContainer"]
margin_left = 64.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PasswordLabel" type="Label" parent="GridContainer"]
margin_top = 33.0
margin_right = 60.0
margin_bottom = 47.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="GridContainer"]
margin_left = 64.0
margin_top = 28.0
margin_right = 260.0
margin_bottom = 52.0
size_flags_horizontal = 3
secret = true

[connection signal="text_changed" from="GridContainer/TextEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="text_changed" from="GridContainer/PasswordEdit" to="." method="_on_PasswordEdit_text_changed"]
